tests/e2e/test-chart/templates/1-image-pull-backoff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-image-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-image
  template:
    metadata:
      labels:
        app: bad-image
    spec:
      containers:
      - name: bad-image-container
        image: nginx:this-tag-does-not-exist
