tests/e2e/test-chart/templates/10-tls.yaml
apiVersion: v1
kind: Secret
metadata:
  name: expired-tls
type: kubernetes.io/tls
data:
  # This is a dummy self-signed cert expired in 2020.
  # Generated via: openssl req -x509 -newkey rsa:2048 -keyout key.pem -out cert.pem -days -1000 -nodes ... then base64
  tls.crt: |
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREVENDQWZXZ0F3SUJBZ0lVTUpOdzJ0QW81ZUhv
[...]
    eFR0cGFWSTg9Ci0tLS0tRU5EIENFUlRJRklDQVRFLS0tLS0K
  tls.key: |
    LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcEFJQkFBS0NBUUVBdHp5K0o0UDhzNkxv
[...]
