tests/e2e/test-chart/templates/2-missing-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: missing-config-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: missing-config
  template:
    metadata:
      labels:
        app: missing-config
    spec:
      containers:
      - name: app
        image: nginx:latest
        envFrom:
        - configMapRef:
            name: non-existent-configmap
