tests/e2e/test-chart/templates/3-crashloopbackoff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crashloop-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crashloop
  template:
    metadata:
      labels:
        app: crashloop
    spec:
      containers:
      - name: app
        image: busybox
        command: ["/bin/sh", "-c", "echo 'Crashing now!' && exit 1"]
